# inboxcleaner

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/inboxcleaner/cli/: actions.py  main.py
src/inboxcleaner/core/: actions.py  config.py  db.py  gmail.py  grouping.py  logging_setup.py  models.py  parsing.py  ratelimit.py  repo.py  schema.sql  sync.py  sync_state.py
src/inboxcleaner/tui/: app.py  styles.tcss
src/inboxcleaner/web/: app.py
src/inboxcleaner/web/templates/: _action_done.html  _action_modal.html  _groups_table.html  _recent_pane.html  _sync_status.html  base.html  group_detail.html  groups.html  index.html
tests/: conftest.py  fakes.py
tests/cli/: test_actions.py  test_main.py
tests/core/: test_actions.py  test_config.py  test_db.py  test_gmail_fake.py  test_grouping.py  test_logging_setup.py  test_parsing.py  test_ratelimit.py  test_repo.py  test_sync.py
tests/tui/: test_app.py
tests/web/: test_routes.py
