[project]
name = "inboxcleaner"
version = "0.1.0"
description = "Local-first Gmail cleanup tool that groups senders into companies."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "tldextract>=5.1",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.scripts]
inboxcleaner = "inboxcleaner.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inboxcleaner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers"
